--- a/Genie/Templates/Infrastructure/Interfaces/IDapperContext.tt
+++ b/Genie/Templates/Infrastructure/Interfaces/IDapperContext.tt
@@ -5,8 +5,14 @@ using System.Data;
 
 namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Interfaces
 {
+	/// <summary>
+    /// A system wide context that holds the connection to the database and manages the connection
+    /// </summary>
 	public interface IDapperContext : IDisposable
 	{
+	    /// <summary>
+        /// Connection to the database
+        /// </summary>
 		IDbConnection Connection { get; }
 	}
 }
