--- a/Genie/Templates/Infrastructure/RepositoryFactory.tt
+++ b/Genie/Templates/Infrastructure/RepositoryFactory.tt
@@ -5,17 +5,16 @@ using <#=GenerationContext.BaseNamespace#>.Infrastructure.Models;
 
 namespace <#=GenerationContext.BaseNamespace#>.Infrastructure
 {
-    public class FactoryRepository : IFactoryRepository
+    public class FactoryRepository : IRepositoryFactory
     {
         public IRepository<T> CreateRepository<T>(IDapperContext context, UnitOfWork unit) where T : BaseModel
         {
             return  new Repository<T>(context, unit);
         }
 
-        public IViewRepository<T> CreateViewRepository<T>(IDapperContext context) where T : class
+        public IViewRepository<T> CreateReadOnlyRepository<T>(IDapperContext context) where T : class
         {
             return  new ViewRepository<T>(context);
         }
     }
-
 }
