Added some progress

--- a/Genie/Templates/Infrastructure/Interfaces/IReadOnlyRepository.tt
+++ b/Genie/Templates/Infrastructure/Interfaces/IReadOnlyRepository.tt
@@ -5,7 +5,7 @@ using System.Data;
 
 namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Interfaces
 {
-	public interface IViewRepository<out T>
+	public interface IReadOnlyRepository<out T>
 		where T : class
 	{
 		IDbConnection Conn { get; }
