--- a/Genie/Templates/Infrastructure/Interfaces/IRepositoryFactory.tt
+++ b/Genie/Templates/Infrastructure/Interfaces/IRepositoryFactory.tt
@@ -25,7 +25,7 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Interfaces
         /// <typeparam name="T">Type of the repository</typeparam>
         /// <param name="context">Context that the repository is created</param>
         /// <returns>A new repository</returns>
-        IViewRepository<T> CreateReadOnlyRepository<T>(IDapperContext context) where T : class;
+        IReadOnlyRepository<T> CreateReadOnlyRepository<T>(IDapperContext context) where T : class;
     }
 }
     
