--- a/Genie/Templates/Infrastructure/RepositoryFactory.tt
+++ b/Genie/Templates/Infrastructure/RepositoryFactory.tt
@@ -12,9 +12,9 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure
             return  new Repository<T>(context, unit);
         }
 
-        public IViewRepository<T> CreateReadOnlyRepository<T>(IDapperContext context) where T : class
+        public IReadOnlyRepository<T> CreateReadOnlyRepository<T>(IDapperContext context) where T : class
         {
-            return  new ViewRepository<T>(context);
+            return  new ReadOnlyRepository<T>(context);
         }
     }
 }
