--- a/Genie/Templates/Infrastructure/Interfaces/IUnitOfWork.tt
+++ b/Genie/Templates/Infrastructure/Interfaces/IUnitOfWork.tt
@@ -1,7 +1,9 @@
 ﻿<#@ template language="C#" #>
 <#@ import namespace="Genie.Base" #>
+using System;
 using System.Data;
 using <#=GenerationContext.BaseNamespace#>.Infrastructure.Models;
+using System.Collections.Generic;
 
 namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Interfaces
 {
@@ -10,7 +12,21 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Interfaces
         IDapperContext Context { get; }
         IDbTransaction Transaction { get; }
         IRepository<TSet> GetRepository<TSet>() where TSet : BaseModel;
+		IReadOnlyRepository<TSet> GetReadonlyRepository<TSet>() where TSet : class;
         IDbTransaction BeginTransaction();
+
+		<#foreach(var relation in _schema.Relations){
+      #>IRepository<<#=relation.Name#>> <#=relation.Name#>Repository { get; }
+        <#}#>
+
+        <#foreach(var view in _schema.Views){
+      #>IReadOnlyRepository<<#=view.Name#>> <#=view.Name#>Repository { get; }
+        <#}#>
+
+        <#foreach(var sp in _schema.Procedures){
+      #>List<T> <#=sp.Name#><T>(<#=sp.ParamString#>);
+        <#}#>
+
         void Commit();
     }
 }
