--- a/Genie/Templates/Infrastructure/UnitOfWork.tt
+++ b/Genie/Templates/Infrastructure/UnitOfWork.tt
@@ -31,7 +31,7 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure
         <#}#>
 
         <#foreach(var view in _schema.Views){
-      #>public IViewRepository<<#=view.Name#>> <#=view.Name#>Repository { get { return GetReadonlyRepository<<#=view.Name#>>(); } }
+      #>public IReadOnlyRepository<<#=view.Name#>> <#=view.Name#>Repository { get { return GetReadonlyRepository<<#=view.Name#>>(); } }
         <#}#>
 
         <#foreach(var sp in _schema.Procedures){
@@ -50,10 +50,10 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure
             return repository;
         }
 
-        public IViewRepository<TSet> GetReadonlyRepository<TSet>() where TSet : class 
+        public IReadOnlyRepository<TSet> GetReadonlyRepository<TSet>() where TSet : class 
         {
             if (_repositories.Keys.Contains(typeof(TSet)))
-                return _repositories[typeof(TSet)] as IViewRepository<TSet>;
+                return _repositories[typeof(TSet)] as IReadOnlyRepository<TSet>;
 
             var repository = _factory.CreateReadOnlyRepository<TSet>(Context);
             _repositories.Add(typeof(TSet), repository);
