--- a/Genie/Templates/Infrastructure/Interfaces/IRepository.tt
+++ b/Genie/Templates/Infrastructure/Interfaces/IRepository.tt
@@ -22,5 +22,6 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Interfaces
 
         IEnumerable<T> GetAll(IDbTransaction transaction = null, int? commandTimeout = null);
         IEnumerable<T> GetBy(object where = null, object order = null, IDbTransaction transaction = null, int? commandTimeout = null);
+        T First(object where = null, IDbTransaction transaction = null, int? commandTimeout = null);
     }
 }
