--- a/Genie/Templates/Infrastructure/Interfaces/IReadOnlyRepository.tt
+++ b/Genie/Templates/Infrastructure/Interfaces/IReadOnlyRepository.tt
@@ -12,6 +12,6 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Interfaces
 		IDapperContext Context { get; }
 
 		IEnumerable<T> GetAll(IDbTransaction transaction = null, int? commandTimeout = null);
-		IEnumerable<T> GetBy(object where = null, object order = null, IDbTransaction transaction = null, int? commandTimeout = null);
+		IEnumerable<T> GetBy(object where = null, object order = null, int? pageSize = null, int? page = null, IDbTransaction transaction = null, int? commandTimeout = null);
 	}
 }
