--- a/Genie/Templates/Infrastructure/Interfaces/IRepository.tt
+++ b/Genie/Templates/Infrastructure/Interfaces/IRepository.tt
@@ -21,7 +21,7 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Interfaces
         T GetByKey(object key, IDbTransaction transaction = null, int? commandTimeout = null);
 
         IEnumerable<T> GetAll(IDbTransaction transaction = null, int? commandTimeout = null);
-        IEnumerable<T> GetBy(object where = null, object order = null, IDbTransaction transaction = null, int? commandTimeout = null);
+        IEnumerable<T> GetBy(object where = null, object order = null, int? pageSize = null, int? page = null, IDbTransaction transaction = null, int? commandTimeout = null);
         T First(object where = null, IDbTransaction transaction = null, int? commandTimeout = null);
     }
 }
