--- a/Genie/Templates/Infrastructure/Repository.tt
+++ b/Genie/Templates/Infrastructure/Repository.tt
@@ -78,9 +78,9 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure
             return items;
         }
 
-        public virtual IEnumerable<T> GetBy(object where = null, object order = null, IDbTransaction transaction = null, int? commandTimeout = null)
+        public virtual IEnumerable<T> GetBy(object where = null, object order = null, int? pageSize = null, int? page = null, IDbTransaction transaction = null, int? commandTimeout = null)
         {
-            var items = Conn.GetBy<T>(where: where, order: order, transaction: transaction, commandTimeout: commandTimeout).ToList();
+            var items = Conn.GetBy<T>(where: where, order: order, pageSize: pageSize, page: page , transaction: transaction, commandTimeout: commandTimeout).ToList();
 
             foreach (var item in items)
             {
